--- a/templates/auth/index.html.twig
+++ b/templates/auth/index.html.twig
@@ -10,7 +10,7 @@
                 
                 {{ form_start(registrationForm) }}
                     {{ form_row(registrationForm.email) }}
-                    {{ form_row(registrationForm.name) }}
+                    {{ form_row(registrationForm.nom) }}
                     {{ form_row(registrationForm.plainPassword) }}
                     
                     <button type="submit" class="btn btn-primary">Register</button>
