--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,9 @@
     <link rel="icon" href="{{ asset('favicon.ico') }}">
     
     {% block stylesheets %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+
         <!-- Bootstrap 5 -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         
@@ -96,7 +99,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_song_index') }}">Bibliothèque</a>
+                        <a class="nav-link" href="{{ path('song_index') }}">Bibliothèque</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_playlist_song_index') }}">Détection d'humeur</a>
