--- a/templates/playlist/index.html.twig
+++ b/templates/playlist/index.html.twig
@@ -8,7 +8,7 @@
     <ul class="list-group">
         {% for playlist in playlists %}
             <li class="list-group-item">
-                <a href="{{ path('app_playlist_show', {'id': playlist.id}) }}">{{ playlist.name }}</a>
+                <a href="{{ path('app_playlist_show', {'id': playlist.id}) }}">{{ playlist.nom }}</a>
             </li>
         {% else %}
             <li class="list-group-item">Aucune playlist disponible.</li>
