--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -88,7 +88,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="{{ path('app_register') }}">
+            <a class="navbar-brand" href="{{ path('app_home') }}">
                 <i class="fas fa-music me-2"></i>Moodify
             </a>
             
