--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -110,22 +110,25 @@
                     {% if app.user %}
                         <div class="dropdown">
                             <a href="#" class="d-flex align-items-center text-decoration-none dropdown-toggle" id="userDropdown" data-bs-toggle="dropdown">
-                                <img src="https://ui-avatars.com/api/?name={{ app.user.username|url_encode }}&background=random" alt="Avatar" class="rounded-circle me-2" width="32" height="32">
-                                <span>{{ app.user.username }}</span>
+                                <img src="https://ui-avatars.com/api/?name={{ app.user.email|url_encode }}&background=random" alt="Avatar" class="rounded-circle me-2" width="32" height="32">
+                                <span>{{ app.user.email }}</span>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end">
                                 {% if is_granted('ROLE_ADMIN') %}
                                     <li><a class="dropdown-item" href="{{ path('admin_dashboard') }}">Administration</a></li>
                                 {% endif %}
-                                <li><a class="dropdown-item" href="{{ path('app_profile') }}">Profil</a></li>
+                                <li><a class="dropdown-item" href="#">Profil</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
+                                <li><a class="dropdown-item" href="#">Déconnexion</a></li>
                             </ul>
                         </div>
                     {% else %}
                         <a href="{{ path('app_login') }}" class="btn btn-outline-primary me-2">Connexion</a>
                         <a href="{{ path('app_register') }}" class="btn btn-primary">Inscription</a>
                     {% endif %}
+                    {% if app.user %}
+  
+{% endif %}
                 </div>
             </div>
         </div>
