--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -221,7 +221,7 @@
             <p class="lead mb-5 animate__animated animate__fadeIn animate__delay-1s">Découvrez des playlists personnalisées qui s'adaptent à vos émotions en temps réel</p>
             <div class="d-flex justify-content-center gap-3 animate__animated animate__fadeIn animate__delay-2s">
                 {% if app.user %}
-                    <a href="{{ path('app_playlist_index') }}" class="btn btn-light btn-lg px-4 btn-primary-custom">
+                    <a href="#" class="btn btn-light btn-lg px-4 btn-primary-custom">
                         <i class="fas fa-robot me-2"></i>Essayer le chatbot
                     </a>
                 {% else %}
